# ubraintank

./: .gitignore  Cargo.toml  config.example.csv  device.toml  justfile  pyproject.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: config.rs  lib.rs  main.rs  nvs.rs
tools/: mock_server.py
