[package]
edition      = "2024"
name         = "ubraintank"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ubraintank"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
log = "0.4.27"
static_cell = "2.1.1"

[dependencies.embassy-executor]
version = "0.9.1"
features = ["log"]

# for more networking protocol support see https://crates.io/crates/edge-net
[dependencies.embassy-net]
version = "0.7.1"
features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
]

[dependencies.embassy-time]
version = "0.5.0"
features = ["log"]

[dependencies.esp-bootloader-esp-idf]
version = "0.4.0"
features = ["esp32", "log-04"]

[dependencies.esp-hal]
version = "~1.0"
features = ["esp32", "log-04", "unstable"]

[dependencies.esp-println]
version = "0.16.1"
features = ["esp32", "log-04"]

[dependencies.esp-radio]
version = "0.17.0"
features = [
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
]

[dependencies.esp-rtos]
version = "0.2.0"
features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
